--- a/index.html
+++ b/index.html
@@ -3,11 +3,81 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style/index.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="scripts/nav.js"></script>
     <title>Project Details</title>
 </head>
-<body>
+<body style="background-color: #b2edc2;">
     <nav-bar></nav-bar>
+    <div class="row mt-4">
+        <div class="header">
+            <h3>Project Details</h3>
+            <hr>
+            <h6>Create a music collection web application using bootstrap, php, MySQL.</h6>
+            <h6>The main use of the website will be to keep track of the user's music library and log play sessions.</h6>
+            <p>Bonus content: If you want to you can make it so that you can keep track of student progress and make it so that
+                the user can log the progress of each student after a class. (let me know if you are interested)
+            </p>
+        </div>
+        <hr>
+        <div id="content"></div>
+            <div class="col-1" id="content"></div>
+            <div class="col" id="content">
+                <h6>Essential Features of the Website:</h6>
+                <ul>
+                    <li>View the music catalogue
+                        <br><p>Users should be able to see the entire catalogue of pieces using a browse tab. Each entity will display essential information
+                            like: the name, composer and difficulty.
+                        </p>
+                    </li>
+                    <li>Sort/Search the music catalogue
+                        <br><p>Users should be able to sort and search the information from different criteria</p>
+                    </li>
+                    <li>Label each piece as mastered, learning or plan to learn
+                        <br> <p>This information can be changed by the user using a form using an edit button. <br>The label will be viewable on the music catalogue, if you don't want to do the bonus content.
+                        </p>
+                    </li>
+                    <li>Log and view play sessions
+                        <br><p>In a different page tab, user can create play session logs to write down comments, what the user played that day, 
+                            approx. duration, etc.</p>
+                    </li>
+                    <li>Insert pieces into a database using a form
+                        <br> <p>The piece can be added using a form where users can enter information such as: the title of the piece,
+                            composer, difficulty, etc. You can add more information if you would want.
+                        </p>
+                    </li>
+                    <li>Edit sond details
+                        <br><p>The pieces can be editable using a form via an edit button on the piece.
+                        </p>
+                    </li>
+                </ul>
+                <hr>
+                <h6>Bonus Content Features:</h6>
+                <ul>
+                    <li>View profiles of users and students
+                        <br><p>Each profile will contain information about the person and tabs to view their personal list (containing only pieces that they have labeled 
+                            as mastered, learning or planning to learn) and a list of all play sessions/class logs</p>
+                    </li>
+                    <li>Log student class
+                        <br><p>User can create a writeup of the progress of the student, comments, what pieces were covered, etc for the class</p>
+                    </li>
+                </ul>
+                <hr>
+                <h6>Learning Objectives:</h6>
+                <ul>
+                    <li>Front-End Development: 
+                        <br><p>Applying bootstrap, javascript and jQuery to create a web application</p></li>
+                    <li>Working with databases: 
+                        <br><p>Learn how to user MySQL and Apache</p></li>
+                    <li>Back-End Development: 
+                        <br><p>Learn how to use php to communicate information from the web application and database</p></li>
+                </ul>
+            </div>
+            <div class="col-1" id="content"></div>
+        </div>
+    </div>
 </body>
 </html>
