--- a/resources.html
+++ b/resources.html
@@ -48,7 +48,12 @@
             <h6>Bootstrap</h6>
             <ul>
                 <li>Obtain bootstrap scripts and styling
-                    <br><br><code id="code">
+                    <br>
+                    <p>These will enable you to use the bootstrap classes, you can define what you want each tag to do using the class attribute:
+                        <br>Example: class="col" in a div tag is used to confine the context into one column. Use multiple to split the
+                        row to as many columns as you want (max 12).
+                        <br>Read up more on things you can do in bootstrap online!
+                    </p><p>To use the styling and classes, add to the head:</p><code id="code">
  &lt;link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"&gt;</code>
                     <br><br><code id="code">
  &lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;</code>
