--- a/resources.html
+++ b/resources.html
@@ -7,34 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="jquery-3.6.1.min.js"></script>
     <title>Resources</title>
 </head>
 <body style="background-color: #b2edc2;">
-    <nav class="navbar navbar-extend-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                Professor Jenny
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Project Details</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/music_list_project/tasks.html">Task List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/music_list_project/resources.html">Resources</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <nav-bar></nav-bar>
     <div class="row mt-4">
         <div class="header">
             <h3>Resources</h3>
