--- a/tasks.html
+++ b/tasks.html
@@ -7,34 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="scripts/navbar.js"></script>
+    <script src="scripts/toggle.js"></script>
     <title>Task List</title>
 </head>
+
 <body style="background-color: #b2edc2;">
-    <nav class="navbar navbar-extend-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">
-                Professor Jenny
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Project Details</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/music_list_project/tasks.html">Task List</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/music_list_project/resources.html">Resources</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    <nav-bar></nav-bar>
     <div class="row mt-4">
         <div class="header">
             <h3>Task List</h3>
@@ -47,18 +26,35 @@
         <div class="col" id="content">
             <h6>Introduction</h6>
             <ol>
-                <li>Getting started
-                    <br><p id="task1">Read over the Project Details and decide if you want to do the bonus content!
-                        <ul id="tasks">
-                            <li id="tasks">Create the starting page called index.html - this can stay blank</li>
-                            <li id="tasks">Create another page called profile.html and make a profile for yourself using html and css.
-                                Tell us about your music journey and stuff!
-                            </li>
-                            <li id="tasks">Bonus: Create a bootstrap navigation bar and use bootstrap classes for your profile.html page</li>
-                        </ul>
-                    </p>
+                <li class="task" id="task1"><span class="title">Getting started</span> [DONE]
+                    <div id="tasks1">
+                        <p>Read over the Project Details and decide if you want to do the bonus content!
+                            <ul>
+                                <li>Create the starting page called index.html - this can stay blank</li>
+                                <li>Create another page called profile.html and make a profile for yourself using html and css.
+                                    Tell us about your music journey and stuff!
+                                </li>
+                                <li>Bonus: Create a bootstrap navigation bar and use bootstrap classes for your profile.html page</li>
+                            </ul>
+                        </p>
+                        <hr>
+                        <p>Feedback: It will look better the more websites you make, but the task is completed none-the-less. Might make you do some side menu action later down the line :^))</p>
+                        <hr>
+                    </div>
                 </li>
-            </0l>
+                <li class="task" id="task2"><span class="title">Introduction to JSON</span>
+                    <div id="tasks2">
+                        <p>Learn about how to make a JSON file
+                            <ul>
+                                <li>Make a JSON file recording 3 pieces you are currently learning!</li>
+                                <li>Each piece should have: title, composer, music sheet link, approx. difficulty and as many other properties you want to add!</li>
+                                <li>Create a new file named music_catalog.html</li>
+                                <li>Using ajax to read the JSON file, make a table displaying each piece's information in the music catalog page</li>
+                            </ul>
+                        </p>
+                    </div>
+                </li>
+            </ol>
         </div>
         <div class="col-1" id="content"></div>
 </body>
