--- a/tasks.html
+++ b/tasks.html
@@ -26,7 +26,7 @@
         <div class="col" id="content">
             <h6>Introduction</h6>
             <ol>
-                <li class="task" id="task1"><span class="title">Getting started</span> [DONE]
+                <li class="task"><span class="title" id="task1">Getting started</span> [DONE]
                     <div id="tasks1">
                         <p>Read over the Project Details and decide if you want to do the bonus content!
                             <ul>
@@ -42,7 +42,7 @@
                         <hr>
                     </div>
                 </li>
-                <li class="task" id="task2"><span class="title">Introduction to JSON</span>
+                <li class="task"><span class="title" id="task2">Introduction to JSON</span>
                     <div id="tasks2">
                         <p>Learn about how to make a JSON file
                             <ul>
