--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,18 @@
  &lt;script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"&gt;&lt;/script&gt;</code>
                 </li>
             </ul>
+            <h6>JSON</h6>
+            <ul>
+                <li>XMLHttpRequest Error and Cross Origin Requests
+                    <br>
+                    <p>This error appears because you use external JSON files. To resolve this error, simply push the
+                        your JSON file and I will put it in the site folder. I will send you the reference to the JSON file(s)
+                        using the Github pages servers. OR you can create a res folder in the site branch and drop your JSON files there.
+                        <br>
+                        You can reference the url: https://jennysu1105.github.io/music_list_project/res/name_of_json.json
+                    </p>
+                </li>
+            </ul>
         </div>
         <div class="col-1" id="content"></div>
     </div>
